Fix layout issues

--- a/src/scss/play.scss
+++ b/src/scss/play.scss
@@ -34,12 +34,9 @@ button {
 }
 
 #game {
-	width: 100%;
 	height: 100%;
-
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
 
 	.game-overlay {
 		position: absolute;
@@ -74,14 +71,14 @@ button {
 	}
 
 	.game-content {
-		width: 100%;
-		height: 100%;
+		flex-grow: 1;
+		flex-shrink: 1;
 
 		display: flex;
 
 		.game-buy {
-			height: 100%;
-			width: 35rem;
+			flex-grow: 0;
+			flex-shrink: 1;
 
 			position: relative;
 			padding: $padding;
@@ -102,6 +99,12 @@ button {
 			}
 
 			.buy-reactors {
+				display: flex;
+				justify-content: space-between;
+				flex-wrap: wrap;
+
+				width: (12rem * 2) + 0.5rem;
+
 				.buy-reactor {
 					width: 12rem;
 
@@ -163,7 +166,8 @@ button {
 		}
 
 		.game-view {
-			width: auto;
+			flex-grow: 1;
+			flex-shrink: 1;
 
 			position: relative;
 
@@ -171,7 +175,10 @@ button {
 			justify-content: center;
 			align-items: center;
 
-			background: #3777dd;
+			background: url('/images/game-map.png'), #3777dd;
+			background-position: center;
+			background-size: contain;
+			background-repeat: no-repeat;
 
 			&.overlay:before {
 				content: ' ';
@@ -186,9 +193,12 @@ button {
 				background: rgba(0, 0, 0, 0.8);
 			}
 
-			.background {
-				max-width: 100%;
-				max-height: 100%;
+			.background-container {
+
+				.background {
+					max-width: 100%;
+					max-height: 100%;
+				}
 			}
 
 			.reactor {
@@ -208,7 +218,9 @@ button {
 	}
 
 	.game-status {
-		width: 100%;
+		flex-grow: 0;
+		flex-shrink: 1;
+
 		padding: 0.5rem;
 
 		position: relative;
